<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_cyan"
    tools:context=".login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="30sp"
            android:textColor="@android:color/black"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_Text"
            android:hint="@string/create_id_hint"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:met_floatingLabel="normal"
            android:layout_marginTop="30dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_Text"
            android:hint="@string/create_password_hint"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:met_floatingLabel="normal"
            android:layout_marginTop="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_Text"
            android:hint="@string/create_name_hint"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:met_floatingLabel="normal"
            android:layout_marginTop="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_Text"
            android:hint="@string/create_email_hint"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:met_floatingLabel="normal"
            android:layout_marginTop="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_Text"
            android:hint="@string/create_phone_hint"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:met_floatingLabel="normal"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:id="@+id/sex_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/male"
                android:textColor="@android:color/black"
                android:layout_marginEnd="40dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female"
                android:textColor="@android:color/black"
                android:layout_marginStart="40dp" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_Button"
            android:text="@string/register_button"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:background="@color/powder_blue"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>