<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_cyan"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:padding="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_Text"
            android:textColor="@android:color/black"
            android:hint="@string/id_hint"
            android:textColorHint="@android:color/darker_gray"
            app:met_floatingLabel="normal"
            android:layout_marginTop="100dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_Text"
            android:textColor="@android:color/black"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/darker_gray"
            app:met_floatingLabel="normal"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/login_Checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_logged_in"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_Button"
            android:text="@string/log_in"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/powder_blue"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_Button"
                android:text="@string/register"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_id_Button"
                android:text="@string/find_id"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_password_Button"
                android:text="@string/find_password"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginStart="10dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>