<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_fragment.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/light_cyan">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_cyan"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:stretchColumns="*">

            <TableRow>

                <Button
                    android:id="@+id/user_information_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/member_information"/>

                <Button
                    android:id="@+id/logout_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/log_out"/>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/user_point_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/point"/>

                <Button
                    android:id="@+id/user_coupon_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/coupon_box"/>

                <Button
                    android:id="@+id/user_order_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/order_list"/>

                <Button
                    android:id="@+id/user_review_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/review_management"/>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:drawableStart="@drawable/ic_build_black_24dp"
                android:text="@string/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:background="@color/light_cyan"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:drawableStart="@drawable/ic_security_black_24dp"
                android:text="@string/developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:background="@color/light_cyan"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:drawableStart="@drawable/ic_public_black_24dp"
                android:text="@string/homePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:background="@color/light_cyan"
                android:padding="5dp"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/light_cyan">

                <TextView
                    android:drawableStart="@drawable/ic_assignment_black_24dp"
                    android:text="@string/developerIntroduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:padding="5dp"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <com.example.oishi.CircleImageView
                            android:src="@drawable/ic_person_black_24dp"
                            android:id="@+id/imageView1"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:civ_border_color="@android:color/black"
                            app:civ_border_width="2dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginStart="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerName1"
                                android:textColor="@android:color/black"
                                android:textSize="17sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerMajor1"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerEmail1"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <com.example.oishi.CircleImageView
                            android:src="@drawable/ic_person_black_24dp"
                            android:id="@+id/imageView2"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:civ_border_color="@android:color/black"
                            app:civ_border_width="2dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginStart="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerName2"
                                android:textColor="@android:color/black"
                                android:textSize="17sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerMajor2"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerEmail2"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <com.example.oishi.CircleImageView
                            android:src="@drawable/ic_person_black_24dp"
                            android:id="@+id/imageView3"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:civ_border_color="@android:color/black"
                            app:civ_border_width="2dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginStart="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerName3"
                                android:textColor="@android:color/black"
                                android:textSize="17sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerMajor3"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developerEmail3"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>