<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alter_payment_method"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powder_blue"
    tools:context="com.example.oishi.purchase.Purchase_alter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/credit_card_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/credit_card_payment"
            android:drawableEnd="@drawable/ic_check_black_24dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@color/light_cyan"/>

        <Button
            android:id="@+id/mobile_phone_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/mobile_phone_payment"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@color/light_cyan"/>



        <Button
            android:id="@+id/samsung_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/samsung_pay"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@color/light_cyan"/>

        <Button
            android:id="@+id/pay_in_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/pay_in_card"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@color/light_cyan"/>

        <Button
            android:id="@+id/pay_in_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/pay_in_cash"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@color/light_cyan"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>